[REFACTOR] 담당자 수정 로직 리팩토링